<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/_2sdp"
    android:minHeight="?listPreferredItemHeightLarge"
    android:layout_height="wrap_content"
    android:background="@color/primary_blue">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/secondary_blue"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/img_category"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_cell_phone" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/txtItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/item_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />




    <TextView
        android:id="@+id/txtExpenseValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/expense_value"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:layout_marginRight="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/rupee_sign"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:layout_marginRight="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="@id/txtExpenseValue"
        app:layout_constraintEnd_toStartOf="@id/txtExpenseValue"
        app:layout_constraintTop_toTopOf="@id/txtExpenseValue" />


</androidx.constraintlayout.widget.ConstraintLayout>