<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.NewEntryFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtFilterDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_blue"
            android:padding="@dimen/_8sdp"
            android:text="14-feb-2021"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/formContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_blue"
            android:minHeight="@dimen/_180sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtFilterDate">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputItemName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_8sdp"
                app:hintTextColor="@color/secondary_blue"
                android:textColorHint="@color/white"

                app:boxStrokeColor="@color/secondary_light_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/enter_item_name"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputItemPrice"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/_8sdp"
                app:hintTextColor="@color/secondary_blue"
                android:padding="@dimen/_8sdp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/secondary_light_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_item_price"
                    android:inputType="number"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/primary_light_blue"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/img_category_selected"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:padding="@dimen/_8sdp"
                        android:src="@drawable/ic_rupee" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:id="@+id/txtSelected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="default"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_2sdp"
            app:layout_constraintTop_toBottomOf="@+id/formContainer"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:backgroundTint="@color/secondary_blue"
        app:srcCompat="@drawable/ic_baseline_save_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>